fix gap and ratio squera in css

--- a/src/components/BasketElement/BasketElement.module.css
+++ b/src/components/BasketElement/BasketElement.module.css
@@ -7,15 +7,23 @@
    padding: 0 15px 20px;
    border-bottom: 1px solid rgb(67, 67, 67);
    position: relative;
+   min-height: 110px;
 }
 
 .pizzaPhotoInBasket {
    width: 100px;
-   aspect-ratio: 1;
+   height: 100px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
+   aspect-ratio: 1;
+}
+
+.pizzaPhotoInBasket::before {
+   content: "";
+   display: block;
+   padding-top: 100%;
 }
 
 .nameOfPizza {
@@ -34,7 +42,7 @@
 
 .plusBtn {
    width: 24px;
-   aspect-ratio: 1;
+   height: 24px;
    transition: scale 0.2s;
    position: relative;
    top: 2px;
@@ -55,9 +63,13 @@
 }
 
 .myPrice {
+   padding-left: 5px;
    flex: 1;
    font-size: 22px;
+   overflow-wrap: break-word;
+   word-break: break-word;
    text-wrap: nowrap;
+   white-space: nowrap;
    max-width: 300px;
 }
 
@@ -125,6 +137,7 @@
       top: 25%;
    }
    .myPrice {
+      padding-left: 0px;
       text-align: end;
    }
 }
@@ -152,6 +165,7 @@
    }
 
    .pizzaPhotoInBasket {
+      height: auto;
       width: 100%;
       max-width: 80px;
    }
