--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -15,6 +15,13 @@
 .footer__links {
    color: #faff00;
    transition: all 0.2s;
+   margin-left: 20px;
+}
+
+@supports (gap: 10px) {
+   .footer__links {
+      margin-left: 0;
+   }
 }
 
 @media (hover: hover) {
