--- a/src/screens/About/About.module.css
+++ b/src/screens/About/About.module.css
@@ -36,10 +36,10 @@
    display: flex;
    justify-content: flex-start;
    align-items: center;
-   gap: 12px;
 }
 
 .listElement_withIcons > span {
+   margin-left: 12px;
    font-size: 20px;
    user-select: text;
 }
