--- a/src/screens/Basket/Basket.module.css
+++ b/src/screens/Basket/Basket.module.css
@@ -1,20 +1,21 @@
 .basket {
    width: 100%;
    height: 100%;
-   display: flex;
-   justify-content: flex-start;
+   display: grid;
+   grid-template-columns: repeat(1, 1fr);
+   justify-items: center;
    align-items: center;
    align-content: center;
-   flex-direction: column;
    gap: 20px;
    max-width: 1320px;
 }
 
 .basket__buyMenu {
-   display: flex;
-   justify-content: center;
+   display: grid;
+   justify-items: center;
    align-items: center;
    align-content: center;
+   grid-template-columns: repeat(2, 1fr);
    width: 100%;
    gap: 20px;
    margin-top: 20px;
@@ -33,7 +34,10 @@
 }
 
 .basket__btn > span {
+   overflow-wrap: break-word;
+   word-break: break-word;
    text-wrap: nowrap;
+   white-space: nowrap;
    margin-left: 14px;
    color: inherit;
 }
@@ -69,6 +73,6 @@
 
 @media (max-width: 300px) {
    .basket__buyMenu {
-      flex-direction: column;
+      grid-template-columns: repeat(1, 1fr);
    }
 }
