--- a/src/screens/PizzaPage/PizzaPage.module.css
+++ b/src/screens/PizzaPage/PizzaPage.module.css
@@ -6,7 +6,10 @@
 
 .pizzaName {
    font-size: 32px;
+   overflow-wrap: break-word;
+   word-break: break-word;
    text-wrap: nowrap;
+   white-space: nowrap;
    font-weight: bold;
 }
 
@@ -18,7 +21,6 @@
 
 .buyContainer {
    display: flex;
-   gap: 20px;
    margin-top: 25px;
    justify-content: flex-start;
    align-items: center;
@@ -28,8 +30,11 @@
 
 .pizzaPirce {
    font-size: inherit;
-   text-wrap: nowrap;
    font-weight: bold;
+   overflow-wrap: break-word;
+   word-break: break-word;
+   text-wrap: nowrap;
+   white-space: nowrap;
 }
 
 .buyPizzaBtn {
@@ -39,6 +44,7 @@
    font-weight: bold;
    padding: 2px 10px 4px;
    border-radius: 5px;
+   margin-left: 20px;
 }
 
 .boxForImg {
@@ -53,12 +59,12 @@
 
 .pizzaImg {
    height: 98vh;
+   width: 98vh;
    aspect-ratio: 1;
    position: absolute;
    transform: translate(50%, 0);
    right: 0;
    top: 0;
-   background-color: rgb(255, 255, 255);
    background-size: cover;
    background-position: right;
    z-index: -1;
@@ -72,7 +78,7 @@
 
 @media (max-width: 720px) {
    .pizzaImg {
-      height: auto;
+      height: 120vw;
       width: 120vw;
       transform: translate(0, -40%);
       right: auto;
@@ -104,9 +110,10 @@
       margin-top: 10px;
       flex-direction: column;
       align-items: flex-start;
-      gap: 10px;
    }
    .buyPizzaBtn {
+      margin-left: 0;
+      margin-top: 10px;
       max-width: 95%;
       font-size: 16px;
    }
@@ -124,9 +131,16 @@
       opacity: 1;
       scale: 1;
       width: 100%;
+      min-height: 50px;
       aspect-ratio: 1;
       background-size: cover;
       background-position: center;
+   }
+
+   .staticpizzaImg::before {
+      content: "";
+      display: block;
+      padding-top: 100%;
    }
 
    .pizzaName {
